# modernopengl

./: .gitignore  CMakeLists.txt  README.md  modernopengl.sln
modernopengl/: modernopengl.vcxproj  modernopengl.vcxproj.filters
modernopengl/src/: Enemy.h  IndexBuffer.cpp  Map.cpp  Map.h  Object2d.cpp  Object2d.h  Player.cpp  Player.h  Shader.h  Texture.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
res/shaders/: Ray.shader
src/: Enemy.cpp  IndexBuffer.h  Map.cpp  Map.h  Object2d.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Shader.cpp  Texture.h  VertexBufferLayout.h  main.cpp
